# LocalLLM

./: .gitignore  CODE_OF_CONDUCT.md  CODE_SIGNING.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TERMS.md  build.md  licenses.md  list.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-sign.yml
catalog/: models.json
scripts/: build-linux.sh  build-variants.js  download-binaries.ps1  download-binaries.sh  download-llama-server.ps1  download-llama-server.sh  download-sd-server.ps1  download-sd-server.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  LICENSE_INSTALLER.txt  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: conversations.rs  download.rs  mod.rs  models.rs  pixara.rs  settings.rs  sidecar.rs  system.rs  tools.rs
src-tauri/src/models/: config.rs  conversation.rs  download.rs  mod.rs  model_meta.rs  pixara.rs  system.rs
src-tauri/src/services/: database.rs  download_manager.rs  gpu_detector.rs  image_generator.rs  inference_server.rs  mod.rs  settings_manager.rs
src-tauri/src/state/: app_state.rs
src/components/: layout.tsx  mode-selector.tsx  sidebar.tsx  titlebar.tsx
src/lib/: constants.ts  types.ts  utils.ts  variant.ts
src/services/: tauri-events.ts
src/stores/: mode-store.ts
src/styles/: globals.css
(+34 files in other folders)
