[package]
name = "localllm"
version = "0.1.0"
description = "A local AI chat application"
authors = ["you"]
edition = "2021"

[lib]
name = "localllm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
dirs = "5"
tokio-util = "0.7"
futures = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

